# graphOGL

./: .gitignore  CMakeLists.txt  functions.cpp  functions.hpp  main.cpp  mgraph.kdev4  scene.cpp
include/: Callbacks.hpp  Shader.hpp  ShaderProgram.hpp
include/base/: Constants.hpp  stdafx.hpp
shaders/: fragment.glsl  fragment1.glsl
shaders/fragment/: base.glsl  multiColor.glsl  multiColorFragment.glsl  texture.glsl
shaders/vertex/: multiColor.glsl  texture.glsl  vertex.glsl  vertexWithColor.glsl
src/: Callbacks.cpp  Shader.cpp  ShaderProgram.cpp
